--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Bhupathi's Projects | All Rights Reserved</p>
+    <p>&copy; 2025 Bhupathi Projects | All Rights Reserved</p>
     <p>Designed with ❤ for real estate excellence</p>
     <div class="footer-cta">
-      <a href="https://wa.me/919640421369?text=Hi%20Bhupathi%20Projects%2C%20I%20am%20interested%20in%20booking%20a%20site%20visit.%20Please%20assist." 
-         class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-        💬 Book a Site Visit on WhatsApp
-      </a>
-    </div>
+     <a href="https://wa.me/919640421369?text=Can%20you%20please%20give%20the%20details%20of%20my%20request" 
+   class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+    💬 Contact on WhatsApp
+</a>
+   </div>
   </footer>
 
 </body>
