--- a/index.html
+++ b/index.html
@@ -248,11 +248,21 @@
 
   <!-- Videos Section -->
   <section class="section">
-    <h2>Plots Showcase</h2>
-    <div class="videos">
-      <iframe class="video-frame" src="https://www.youtube.com/embed/JJQJbnMOksk" allowfullscreen></iframe>
-    </div>
+  <h2>Plots Showcase</h2>
+  <div class="videos">
+    <!-- Existing video -->
+    <iframe class="video-frame"
+            src="https://www.youtube.com/embed/JJQJbnMOksk"
+            allowfullscreen>
+    </iframe>
+    <!-- New video -->
+    <iframe class="video-frame"
+            src="https://www.youtube.com/embed/3Pa9PZv3xY0"
+            allowfullscreen>
+    </iframe>
+  </div>
   </section>
+
 
   <!-- Footer -->
   <footer>
