--- a/index.html
+++ b/index.html
@@ -247,23 +247,33 @@
   </section>
 
   <!-- Videos Section -->
-  <section class="section">
+ <section class="section">
   <h2>Plots Showcase</h2>
   <div class="videos">
-    <!-- Existing video -->
+    <!-- Existing videos -->
     <iframe class="video-frame"
             src="https://www.youtube.com/embed/JJQJbnMOksk"
             allowfullscreen>
     </iframe>
-    <!-- New video -->
+
     <iframe class="video-frame"
             src="https://www.youtube.com/embed/3Pa9PZv3xY0"
             allowfullscreen>
     </iframe>
+
+    <iframe class="video-frame"
+            src="https://www.youtube.com/embed/R5DwSS78lxU"
+            allowfullscreen>
+    </iframe>
+
+    <!-- New Ashok Leyland completion video -->
+    <iframe class="video-frame"
+            src="https://www.youtube.com/embed/0Ttj4RNZhME"
+            allowfullscreen>
+    </iframe>
   </div>
-  </section>
-
-
+</section>
+  
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Bhupathi Projects | All Rights Reserved</p>
